feat(busqueda): filtros por emisor y por receptor, y tres arreglos que salieron de usarla
Todo esto salio de mirar la interfaz contra la contabilidad REAL —13.521
comprobantes— en vez de contra los fixtures.

FILTROS POR PARTE. `q` busca en los dos lados a la vez, que es lo correcto para
"todo lo de esta contraparte". Faltaba la pregunta distinta: "lo que ME facturo
fulano" contra "lo que YO le facture". Dos cajas, cada una acepta cedula o nombre
—una cedula no coincide con ningun nombre y viceversa, asi que no hay que decir cual
se esta escribiendo—. Las especificaciones ya existian en ComprobanteSpecs; el filtro
simplemente no las exponia.

Medido en produccion: Auto Mercado 3101007186 da 168 en total, 168 como emisor y 0
como receptor. Un supermercado no compra.

CONTRAPARTES CONTABA APARICIONES, NO COMPROBANTES. La columna decia 1.437 para una
cedula que tiene 1.370, porque 67 documentos la llevan en los dos nodos y entraba por
las dos ramas del union all. El numero prometia uno y el clic mostraba otro. Se
excluye en la rama del receptor el caso receptor = emisor: una linea por rama, sin
perder la pre-agregacion.

"VER COMPROBANTES" MOSTRABA CERO. La lista de contrapartes cuenta todo el historico
—la consulta no filtra por fecha— y el clic aplicaba el rango de la barra superior.
Con el rango en 1 jun-5 sep, una contraparte con 6.310 comprobantes mostraba ninguno.
Ahora el enlace lleva un rango que cubre el historico, y lo que se ve coincide con lo
que prometia la columna.

LOS REPORTES SON BOTONES. Ya bajaban —el servidor manda Content-Disposition— pero un
enlace de texto no comunica que la accion es una descarga. Siguen siendo <a> por
debajo, para que descargue el navegador y no un fetch con blobs.

Y de paso: una clave de 50 digitos usa la igualdad sobre la llave primaria en vez de
`like %…%`, que obligaba a barrer las cinco tablas.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>